Continue work on assignment generator
This includes:
- Add option to select admins as bots in disguise
- Split workflow into round generation and round start
- Store more information in the backend
- Add ability to toggle all users together
- Rework API endpoints
- Change how chat rooms are initialized
